@@ -3,7 +3,7 @@ import org.jetbrains.dokka.gradle.DokkaExtension
 plugins {
     id("com.kelvsyc.internal.dokka")
     id("com.kelvsyc.internal.jacoco")
-    id("com.kelvsyc.internal.kotlin-plugin")
+    id("com.kelvsyc.internal.kotlin-gradle-library")
     id("com.kelvsyc.internal.github-publishing")
 }
 
@@ -11,22 +11,18 @@ configure<DokkaExtension> {
     moduleName.set("SES Java Base")
 }
 
-gradlePlugin {
-    plugins.register("aws-ses-java-base") {
-        id = "com.kelvsyc.gradle.aws-ses-java-base"
-        implementationClass = "com.kelvsyc.gradle.plugins.SesJavaBasePlugin"
-    }
-}
-
 dependencies {
-    api("com.kelvsyc.gradle:aws-java-extensions")
     api("com.kelvsyc.gradle:clients-base")
 
     api(libs.aws.ses.java)
-    implementation(libs.aws.auth.java)
-    implementation(libs.aws.core.java)
-    implementation(libs.aws.regions.java)
-    implementation(libs.aws.sdk.core.java)
+    api(libs.aws.auth.java)
+    api(libs.aws.regions.java)
+    api(libs.aws.sdk.core.java)
 
     testImplementation(libs.mockk)
+}
+
+tasks.test {
+    // FIXME https://github.com/gradle/gradle/issues/18647
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
